--- a/portfolio/src/styles/globals.css
+++ b/portfolio/src/styles/globals.css
@@ -28,6 +28,17 @@ body {
   src: url('/fonts/Montserrat-VariableFont_wght.ttf');
 }
 
+@font-face{
+  font-family: 'Poppins';
+  src: url('/fonts/Poppins-SemiBold.ttf');
+  font-weight: 600;
+}
+
+@font-face{
+  font-family: 'Avenir';
+  src: url('/fonts/Montserrat-VariableFont_wght.ttf');
+}
+
 .text-stroke {
   /* Initialisation de la variable */
   --progress: 0;
